# legendy-baumanki-2025

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: deploy.yaml
migrations/: 001_init.down.sql  001_init.up.sql  002_add_media.down.sql  002_add_media.up.sql  003_add_admin.down.sql  003_add_admin.up.sql  004_add_tasks.down.sql  004_add_tasks.up.sql  005_add_characters.down.sql  005_add_characters.up.sql  006_add_index_for_characters.down.sql  006_add_index_for_characters.up.sql  007_add_preferred_mode_for_users.down.sql  007_add_preferred_mode_for_users.up.sql  008_add_feedbacks.down.sql  008_add_feedbacks.up.sql  009_disband_uncompleted_teams.down.sql  009_disband_uncompleted_teams.up.sql  010_count_hint_points_from_tasks.down.sql  010_count_hint_points_from_tasks.up.sql  011_add_tracks.down.sql  011_add_tracks.up.sql  012_add_slots.down.sql  012_add_slots.up.sql
src/: main.rs
src/app/: error.rs  mod.rs  ports.rs
src/app/usecases/: answer_task.rs  app.rs  cancel_reservation.rs  change_full_name.rs  change_group_name.rs  check_admin.rs  check_captain.rs  check_registered.rs  check_started_track.rs  check_team_exists.rs  create_team.rs  dto.rs  exit_team.rs  get_available_slot_starts.rs  get_available_tasks.rs  get_available_tracks.rs  get_character.rs  get_character_names.rs  get_completed_tasks.rs  get_media.rs  get_player.rs  get_profile.rs  get_task.rs  get_user.rs  mod.rs  (+16 more)
src/bot/: dispatcher.rs  fsm.rs  keyboards.rs  mod.rs  resources.rs  texts.rs
src/domain/: error.rs
src/utils/: mod.rs  short_uuid.rs  uuid.rs
(+25 files in other folders)
