[package]
name = "legendy-baumanki-2025"
version = "1.1.0"
edition = "2024"

[dependencies]
regex = "1.11.2"
thiserror = "2.0.16"
rand = "0.9.2"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
async-trait = "0.1.89"
tokio-postgres = "0.7.13"
deadpool-postgres = "0.14.1"
teloxide = { version = "0.17.0", features = ["macros", "postgres-storage-nativetls"] }
log = "0.4.28"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
postgres-types = { version = "0.2.9", features = ["derive", "with-chrono-0_4"] }
chrono = "0.4.42"
levenshtein = "1.0.5"
